--- a/Resources/config/normalizer.yml
+++ b/Resources/config/normalizer.yml
@@ -2,7 +2,10 @@
 services:
   happyr.serializer.normalizer.metadata_aware:
     class: Happyr\SerializerBundle\Normalizer\MetadataAwareNormalizer
-    arguments: [[], "@happyr.serializer.normalizer.heler.property_name_converter"]
+    arguments:
+      - []
+      - "@happyr.serializer.property_access.attribute_extractor"
+      - "@happyr.serializer.normalizer.heler.property_name_converter"
     public: false
     tags:
       - { name: "serializer.normalizer", priority: -999 }
