--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "php": "^5.5|^7.0",
         "symfony/serializer": "^2.7|^3.0",
         "symfony/finder": "^2.7|^3.0",
-        "doctrine/annotations": "^1.2"
+        "doctrine/annotations": "^1.2",
+        "twig/twig": "^1.18|^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.3",
